

Version 2.7.0 (v2.7.0 RTM)

	New features:
		-[Core] Added support for resolving IList<T> and ICollection<T>. (work item 20981)
		-[Core] Added support for resolving arrays. (work item 20982)
		-[Core] Added 'thorn lifestyle' diagnostic warning (work item 20975).
		-[Core] Added 'disposable transient' diagnostic warning (work item 20957).


Version 2.6.1 (v2.6.1 RTM) 2014-10-26

	Bug fixes:
		-[Core] Improved the exception messages in case unregistered delegates are resolved. (work item 20980)
		-[Core] Resolving unregistered concrete type with overloaded lifestyle selection behavior wasn't
		 thread-safe. (work item 20976)


Version 2.6.0 (v2.6.0 RTM) 2014-10-14

	New features:
		-[Core] RegisterAll now allows registering open-generic types as well. (work item 20971)
		-[Core] New Container.Options.LifestyleSelectionBehavior extendibility point added to allow overriding
		 the container's behavior to register type's with the Transient lifestyle. This is especially useful
		 for batch-registration scenarios. (work item 20965)
		-[Core] DecoratorContext can now be injected into a decorator that is registered using the
		 RegisterDecorator extension methods. (work item 20959)
		-[Core] InstanceProducer.VisualizeObjectGraph() method added to allow visualizing the object graph
		 of an registration. Feature also added in the debugger view. (work item 20954)
		-[Core] Container.GetRootRegistrations() method added that allows retrieving all root registrations.
		 The container debugger view now also shows root registrations. (work item 20955)
		-[PCL] New RegisterManyForOpenGeneric extension method overloads added that allow supplying the
		 AccessibilityOption. (work item 20396)
		-[Wcf] SimpleInjectorServiceBehavior class added to make it easier for users to create self-hosted
		 WCF services. (work item 20898)
		-[Wcf] GetImplementedContracts method added to SimpleInjectorServiceHost to take it easier to add
		 any custom behaviors to the implemented contracts.
