@@ -8,6 +8,8 @@ Version 2.7.0 (v2.7.0 RTM)
 		-[Core] Added support for resolving arrays. (work item 20982)
 		-[Core] Added 'thorn lifestyle' diagnostic warning (work item 20975).
 		-[Core] Added 'disposable transient' diagnostic warning (work item 20957).
+		-[Core] Added support for resolving assignable variant implementations in collections registered
+		 with RegisterAll (work item 20984).
 
 
 Version 2.6.1 (v2.6.1 RTM) 2014-10-26
